tests/buffer/errors/binary_write_negative_value.dby
import std.buffer as buf
import std.binary as bin
let b = buf.new(4)
bin.write_u32_le(b, 0, -1)
